# cricket-companion-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
cricket_companion/: analyst_response.py  basic_response.py  chat_models.py  chat_service.py  config.py  executor.py  fantasy_news.py  fantasy_response.py  fantasy_schemas.py  graph.py  llm_composer.py  logging_config.py  memory_store.py  output_models.py  planner.py  router.py  schemas.py  sim_response.py  sim_schemas.py  stats_templates.py
cricket_companion/tools/: __init__.py  base.py  fantasy.py  retrieval.py  sim.py  stats.py  web.py
docs/: ARCHITECTURE.md
docs/knowledge/: README.md  glossary.md
docs/knowledge/formats/: t20_vs_odi_vs_test.md
docs/knowledge/rules/: dismissals.md  dls.md  extras.md  lbw.md  powerplay.md  super_over.md
docs/knowledge/stats/: common_metrics.md  economy.md  strike_rate.md
docs/knowledge/tactics/: batting_phases.md  bowling_death_overs.md
mcp_servers/fantasy_mcp/: server.py
mcp_servers/retrieval_mcp/: server.py
mcp_servers/sim_mcp/: server.py
mcp_servers/stats_mcp/: server.py
mcp_servers/web_mcp/: server.py
pipelines/: build_knowledge_index.py  build_web_index.py  derive_features_ipl_duckdb.py  ingest_ipl_yaml_to_duckdb.py  validate_ipl_duckdb.py
ui/: app.py
