[project]
name = "cricket-companion"
version = "0.1.0"
description = "Single-chat cricket assistant routed via LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cricket_companion"]