[project]
name = "cricket-companion"
version = "0.1.0"
description = "Single-chat cricket assistant routed via LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.131.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.9",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "tavily-python>=0.7.21",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cricket_companion"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
